Some minor changes.